# human-retargeting

./: .gitignore  .gitmodules  000_ori_forward_model.py  001_server.py  002_glove2hand.py  003_glove2leap.py  003_vispos2pos-Boris.py  003_vispos2pos.py  004_forward_model.py  005_forward_model_chest.py  006_leaptest.py  006_vis_human_body.py  007_test_pyrender.py  008_realtime_retargeting.py  008_smpl_visualizer.py  009_rebocap_server.py  010_mano_server.py  010_mano_visualizer.py  010_server.test.py  011_mano_server.py  011_pybullettest.py  012_vis_leaphand-Boris.py  012_vis_leaphand.py  012_wholebody_server.py  012_wholebody_visualizer.py  013_camera.py  013_randomMANO.py  014_MANOteleop.py  014_wholebody_client.py  015_wholebody_server.py  016_apriltag_test.py  017_apriltag_rs.py  018_apriltag_camera.py  019_tagpose_visualizer.py  020_robot_visualizer.py  021_client_render.py  022_camera_commands.py  023_right_arm_server.py  024_client_bimanual.py  027_smpl.py  (+38 more)
Hand_Unicast/: client.py  server.py
human-retargeting/: constants.py  humanoidrobot.py  kinematics_adaptor.py  optimizer.py  optimizer_utils.py
img/: draw.py  draw0.py  draw1.py
rebocap_cpp_sdk_v3/: CMakeLists.txt  rebocap_ws_sdk.cpp  rebocap_ws_sdk_cpp.h
rebocap_csharp_sdk_v2/: Program.cs  README.md  avatar_parsed_data.json
rebocap_python_sdk_v2/: printall.txt  rebocap_ws_sdk_example.py  rebocap_ws_sdk_example_with_class.py
rebocap_ws_sdk/: __init__.py  rebocap_ws_sdk.py
scripts/: download.sh
utils/: calculator.py  func_utils.py  hand_model.py  mesh_utils.py  robot_model.py  rotation.py
(+211 files in other folders)
