cmake_minimum_required(VERSION 3.25)
project(rebocap_ws_sdk_cpp_example)

set(CMAKE_CXX_STANDARD 23)


add_executable(rebocap_ws_sdk_cpp_example rebocap_ws_sdk_cpp_example.cpp rebocap_ws_sdk.cpp)
target_include_directories(rebocap_ws_sdk_cpp_example PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(rebocap_ws_sdk_cpp_example PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_directories(rebocap_ws_sdk_cpp_example PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/bin)
#link_directories()
target_link_libraries(rebocap_ws_sdk_cpp_example rebocap_ws_sdk)
